unpackaged/main/default/objects/Campaign/fields/EBH_RefreshStatus__c.field-meta.xml
<CustomField>
    <fullName>EBH_RefreshStatus__c</fullName>
    <description>[EBH] (EPH-5628) - to update refresh status</description>
    <formula>If(  EBH_MemberLastRefreshDate__c &lt;  EBH_TLLastModifiedDate__c , &#39;Outdated&#39;, &#39;Up to Date&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Refresh Status</label>
    <type>Text</type>
</CustomField>