unpackaged/main/default/objects/Campaign/fields/EBH_ResponseCode__c.field-meta.xml
<CustomField>
    <fullName>EBH_ResponseCode__c</fullName>
    <description>[EBH] (EPH-1880) - Response Code Unified</description>
    <label>Response Code</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>