unpackaged/main/default/objects/Campaign/fields/EBH_ResponseDayAbsolute__c.field-meta.xml
<CustomField>
    <fullName>EBH_ResponseDayAbsolute__c</fullName>
    <description>[EBH] (EPH-1880) - Day of First Response absolute (integer -&gt; number of days since 2015-01-01)</description>
    <label>Response Day Absolute</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>