unpackaged/main/default/objects/Campaign/fields/EBH_ResponseDuration__c.field-meta.xml
<CustomField>
    <fullName>EBH_ResponseDuration__c</fullName>
    <description>[EBH] (EPH-1880) - Total Time spend with this contact (will be empty for email compaigns and contain the number of minutes for phone outreach)</description>
    <label>Response Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>