unpackaged/main/default/objects/Campaign/fields/EBH_SellerList__c.field-meta.xml
<CustomField>
    <fullName>EBH_SellerList__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[EBH] (EPH-1880) - Seller List</description>
    <label>Seller List</label>
    <referenceTo>EBH_Filter__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>EBH_Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>