unpackaged/main/default/objects/Campaign/fields/EBH_Sent__c.field-meta.xml
<CustomField>
    <fullName>EBH_Sent__c</fullName>
    <defaultValue>0</defaultValue>
    <description>[EBH] (EPH-1880) - Aggregated field to count sent campaign members. This is a custom roll up summary field on Campaign as well</description>
    <inlineHelpText>Aggregated number of seller contacts sent</inlineHelpText>
    <label>Sent</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>