unpackaged/main/default/objects/Campaign/fields/EBH_ServiceProvider__c.field-meta.xml
<CustomField>
    <fullName>EBH_ServiceProvider__c</fullName>
    <description>[EPH] (EPH-1881) - To indicate the service provider Created:</description>
    <label>Service Provider</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Publicare</fullName>
            </value>
            <value>
                <fullName>Emarsys</fullName>
            </value>
            <value>
                <fullName>GCX</fullName>
            </value>
            <value>
                <fullName>AM Outreach</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>