unpackaged/main/default/objects/Campaign/fields/EBH_StatusInChannel__c.field-meta.xml
<CustomField>
    <fullName>EBH_StatusInChannel__c</fullName>
    <description>[EBH] (EPH-3300) : Status In Channel</description>
    <label>Status In Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prelaunch</fullName>
            </value>
            <value>
                <fullName>Launched</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>