unpackaged/main/default/objects/Campaign/fields/EBH_StrategicPriority__c.field-meta.xml
<CustomField>
    <fullName>EBH_StrategicPriority__c</fullName>
    <description>[EBH] (EPH-2546) : Parent priorities</description>
    <label>Strategic Priority</label>
    <length>80</length>
    <type>Text</type>
</CustomField>