unpackaged/main/default/objects/Campaign/fields/EBH_SubscriptionStatus__c.field-meta.xml
<CustomField>
    <fullName>EBH_SubscriptionStatus__c</fullName>
    <description>[EBH] (EPH-3300) : Subscription Status</description>
    <label>Subscription Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1. Track</fullName>
            </value>
            <value>
                <fullName>2. Don&#39;t Track</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>