unpackaged/main/default/objects/Campaign/fields/EBH_Tags__c.field-meta.xml
<CustomField>
    <fullName>EBH_Tags__c</fullName>
    <label>Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Acquisition</fullName>
            </value>
            <value>
                <fullName>Advertising</fullName>
            </value>
            <value>
                <fullName>Inventory Management</fullName>
            </value>
            <value>
                <fullName>Lifecycle Management</fullName>
            </value>
            <value>
                <fullName>Monetisation &amp; Commercial Model</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Product, Policy, and Compliance Plans</fullName>
            </value>
            <value>
                <fullName>Promoted Listings</fullName>
            </value>
            <value>
                <fullName>Promotions &amp; Incentives</fullName>
            </value>
            <value>
                <fullName>Retention</fullName>
            </value>
            <value>
                <fullName>S-18-00</fullName>
            </value>
            <value>
                <fullName>Scaling</fullName>
            </value>
            <value>
                <fullName>Shipping</fullName>
            </value>
            <value>
                <fullName>Tag</fullName>
            </value>
            <value>
                <fullName>Vertical Initiatives</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>