unpackaged/main/default/objects/Campaign/fields/EBH_Targeted__c.field-meta.xml
<CustomField>
    <fullName>EBH_Targeted__c</fullName>
    <defaultValue>0</defaultValue>
    <description>[EBH] (EPH-1880) - Aggregated field to count targeted campaign members. This is a custom roll up summary field on Campaign as well</description>
    <inlineHelpText>Aggregated number of seller contacts targeted</inlineHelpText>
    <label>Targeted</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>