unpackaged/main/default/objects/Campaign/fields/EBH_TargetedContacts__c.field-meta.xml
<CustomField>
    <fullName>EBH_TargetedContacts__c</fullName>
    <description>[EBH] (EPH-1880) - Targeted Contacts - as the label change was needed, creating a formula field to refer the standard calculated field as standard field label cannot be changed.</description>
    <formula>IF( OR(RecordType.DeveloperName = &quot;EBH_SubCampaign&quot;, RecordType.DeveloperName ==&quot;EBH_AMOutreach&quot;), 
    NumberOfContacts ,  
    IF(OR(RecordType.DeveloperName = &quot;EBH_Campaign&quot;,
      RecordType.DeveloperName = &quot;EBH_CampaignProgramme&quot;), HierarchyNumberOfContacts, null) 
    )</formula>
    <label>Targeted Contacts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>