unpackaged/main/default/objects/Campaign/fields/EBH_TargetedDistinctSellers__c.field-meta.xml
<CustomField>
    <fullName>EBH_TargetedDistinctSellers__c</fullName>
    <description>[EBH] (EPH-1880) - Calculated field that identifies the number of unique Sellers from the Campaign Members</description>
    <inlineHelpText>Number of unique Sellers from the Campaign Members</inlineHelpText>
    <label>Targeted Distinct Sellers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>