unpackaged/main/default/objects/Campaign/fields/EBH_TaskCreated__c.field-meta.xml
<CustomField>
    <fullName>EBH_TaskCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[EBH] (EPH-3519) - To track if the task is created for associated Campaign Members</description>
    <label>Is Task Created</label>
    <type>Checkbox</type>
</CustomField>