unpackaged/main/default/objects/Campaign/fields/EBH_TestMailApprovers__c.field-meta.xml
<CustomField>
    <fullName>EBH_TestMailApprovers__c</fullName>
    <description>[EBH] (EPH-71) - Number of Test Mail Approvers present in Custom Settings</description>
    <label>Test Mail Approvers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>