unpackaged/main/default/objects/Campaign/fields/EBH_TLLastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>EBH_TLLastModifiedDate__c</fullName>
    <description>[EBH] (EPH-5624) - to capture date time where the value in the field &quot;Seller List&quot; last changed</description>
    <label>TL Last Modified Date</label>
    <type>DateTime</type>
</CustomField>