unpackaged/main/default/objects/Campaign/fields/EBH_UniqueSellerList__c.field-meta.xml
<CustomField>
    <fullName>EBH_UniqueSellerList__c</fullName>
    <description>[EBH] (EPH-5428) - to have a unique seller list for each campaign</description>
    <label>Unique Seller List</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>