unpackaged/main/default/objects/Campaign/fields/EBH_Vertical__c.field-meta.xml
<CustomField>
    <fullName>EBH_Vertical__c</fullName>
    <description>[EBH] (EPH-2641) - Vertical
US-0011867</description>
    <label>Vertical</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business &amp; Industrial</fullName>
            </value>
            <value>
                <fullName>Collectibles</fullName>
            </value>
            <value>
                <fullName>Electronics</fullName>
            </value>
            <value>
                <fullName>Fashion</fullName>
            </value>
            <value>
                <fullName>Home &amp; Garden</fullName>
            </value>
            <value>
                <fullName>Lifestyle</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Parts &amp; Accessories</fullName>
            </value>
            <value>
                <fullName>Bussiness &amp; Industry</fullName>
            </value>
            <value>
                <fullName>Sneakers</fullName>
            </value>
            <value>
                <fullName>Watches</fullName>
            </value>
            <value>
                <fullName>Re-Store</fullName>
            </value>
            <value>
                <fullName>Outlet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>