unpackaged/main/default/objects/Campaign/fields/Engagement_Rate__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Rate__c</fullName>
    <description>US-0011867</description>
    <label>Engagement Rate (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>