unpackaged/main/default/objects/Campaign/fields/EventsAir_Event__c.field-meta.xml
<CustomField>
    <fullName>EventsAir_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[#EPH-5734]</description>
    <label>EventsAir Event</label>
    <referenceTo>EventsAir_Event__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>