unpackaged/main/default/objects/Campaign/fields/Followers__c.field-meta.xml
<CustomField>
    <fullName>Followers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Followers</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaigns2</relationshipName>
    <type>Lookup</type>
</CustomField>