unpackaged/main/default/objects/Campaign/fields/GCX_Inbound__c.field-meta.xml
<CustomField>
    <fullName>GCX_Inbound__c</fullName>
    <defaultValue>TEXT(0)</defaultValue>
    <label>GCX Inbound</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>