unpackaged/main/default/objects/Campaign/fields/Gold_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Gold_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>EPH-7112 Gold Campaign flag on Camapaign Programme record</description>
    <label>Gold Campaign</label>
    <type>Checkbox</type>
</CustomField>