unpackaged/main/default/objects/Campaign/fields/Influencer_brief_template__c.field-meta.xml
<CustomField>
    <fullName>Influencer_brief_template__c</fullName>
    <description>US-0011867</description>
    <inlineHelpText>Template for a brief that agency will send to influencers. 
Down the line it is changed to be influencer-specific.</inlineHelpText>
    <label>Influencer brief (template)</label>
    <type>Url</type>
</CustomField>