unpackaged/main/default/objects/Campaign/fields/Interactions_total_number__c.field-meta.xml
<CustomField>
    <fullName>Interactions_total_number__c</fullName>
    <description>US-0011867</description>
    <label>Interactions (total number)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>