unpackaged/main/default/objects/Campaign/fields/Journey_Builder__c.field-meta.xml
<CustomField>
    <fullName>Journey_Builder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Journey Builder</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaigns1</relationshipName>
    <type>Lookup</type>
</CustomField>