unpackaged/main/default/objects/Campaign/fields/Journey_Status__c.field-meta.xml
<CustomField>
    <fullName>Journey_Status__c</fullName>
    <description>EPH-6484 Add campaign members in SFMC journeys</description>
    <label>Journey Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>