unpackaged/main/default/objects/Campaign/fields/Journey_Version__c.field-meta.xml
<CustomField>
    <fullName>Journey_Version__c</fullName>
    <description>EPH-6484 Add campaign members in SFMC journeys</description>
    <label>Journey Version</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>