unpackaged/main/default/objects/Campaign/fields/Message_Center_ID__c.field-meta.xml
<CustomField>
    <fullName>Message_Center_ID__c</fullName>
    <description>EPH-6706 Update Sub campaign Page Layout</description>
    <label>Message Center ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>