unpackaged/main/default/objects/Campaign/fields/Outrage_ID__c.field-meta.xml
<CustomField>
    <fullName>Outrage_ID__c</fullName>
    <formula>TEXT(EBH_Site__c)+&quot;_&quot;+ TEXT( StartDate )+&quot;_&quot;+ Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outrage ID</label>
    <type>Text</type>
</CustomField>