unpackaged/main/default/objects/Campaign/fields/Outreach_ID__c.field-meta.xml
<CustomField>
    <fullName>Outreach_ID__c</fullName>
    <formula>text(EBH_Site__c) &amp; &quot;_&quot;&amp;  text(StartDate) &amp; &quot;_&quot; &amp; Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outreach ID</label>
    <type>Text</type>
</CustomField>