unpackaged/main/default/objects/Campaign/fields/Proposal__c.field-meta.xml
<CustomField>
    <fullName>Proposal__c</fullName>
    <description>US-0011867</description>
    <inlineHelpText>Agency proposal with specific campaign information,
 e.g. strategy, initial selection of influencers, etc.</inlineHelpText>
    <label>Proposal</label>
    <type>Url</type>
</CustomField>