unpackaged/main/default/objects/Campaign/fields/Rejected__c.field-meta.xml
<CustomField>
    <fullName>Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>field to track when a campaign has been rejected since we don&#39;t use &quot;Rejected&quot; value (we use Draft)</description>
    <label>Rejected</label>
    <type>Checkbox</type>
</CustomField>