unpackaged/main/default/objects/Campaign/fields/Reporting__c.field-meta.xml
<CustomField>
    <fullName>Reporting__c</fullName>
    <description>US-0011867</description>
    <label>Reporting</label>
    <type>Url</type>
</CustomField>