unpackaged/main/default/objects/Campaign/fields/Sparc_ID__c.field-meta.xml
<CustomField>
    <fullName>Sparc_ID__c</fullName>
    <description>EPH-6706 Update Sub campaign Page Layout</description>
    <label>Sparc ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>