unpackaged/main/default/objects/Campaign/fields/Sub_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Sub_Campaign_ID__c</fullName>
    <description>EPH-6706 Update Sub campaign Page Layout</description>
    <formula>Parent.Campaign_ID__c   + &quot;_&quot; + Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub-Campaign ID</label>
    <type>Text</type>
</CustomField>