unpackaged/main/default/objects/Campaign/fields/Survey_ID__c.field-meta.xml
<CustomField>
    <fullName>Survey_ID__c</fullName>
    <description>Please note that only HIVE Admins can populate Survey ID value.

Open a new &quot;Validate survey&quot; ticket with Survey ID and Campaign Information. Once the HIVE admins provide your survey settings, you will be able to create Tasks.</description>
    <inlineHelpText>Please note that only HIVE Admins can populate Survey ID value.

Open a new &quot;Validate survey&quot; ticket with Survey ID and Campaign Information. Once the HIVE admins provide your survey settings, you will be able to create Tasks.</inlineHelpText>
    <label>Survey ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>