unpackaged/main/default/objects/Campaign/fields/Survey_Monkey__c.field-meta.xml
<CustomField>
    <fullName>Survey_Monkey__c</fullName>
    <description>EPH-6706 Update Sub campaign Page Layout</description>
    <label>Survey Monkey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>