unpackaged/main/default/objects/Campaign/fields/Targetlist_in_VDM__c.field-meta.xml
<CustomField>
    <fullName>Targetlist_in_VDM__c</fullName>
    <description>EPH-6706 Update Sub campaign Page Layout</description>
    <label>Targetlist in VDM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>