unpackaged/main/default/objects/Campaign/fields/Technical_Notes__c.field-meta.xml
<CustomField>
    <fullName>Technical_Notes__c</fullName>
    <description>EPH-5969 MA - Submit Brief for Scheduling (Campaign)</description>
    <label>Technical Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>