unpackaged/main/default/objects/Campaign/fields/toKeep__c.field-meta.xml
<CustomField>
    <fullName>toKeep__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporary service field for cleanup</description>
    <label>toKeep</label>
    <type>Checkbox</type>
</CustomField>