unpackaged/main/default/objects/Campaign/fields/Triggered_Send_Name__c.field-meta.xml
<CustomField>
    <fullName>Triggered_Send_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>EPH-6485 Synchronise campaign feedback from SFMC to SFDC</description>
    <label>Triggered Send Name</label>
    <referenceTo>et4ae5__Automated_Send__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>