unpackaged/main/default/objects/Campaign/fields/Type_of_Activity__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Activity__c</fullName>
    <description>US-0011867</description>
    <label>Type of Activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Organic</fullName>
            </value>
            <value>
                <fullName>Paid &amp; Organic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>