unpackaged/main/default/objects/Campaign/fields/Usage_Rights__c.field-meta.xml
<CustomField>
    <fullName>Usage_Rights__c</fullName>
    <description>US-0011867</description>
    <inlineHelpText>Common duration for usage rights would be 6 months, included in contract</inlineHelpText>
    <label>Usage Rights</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3 months</fullName>
            </value>
            <value>
                <fullName>6 months</fullName>
            </value>
            <value>
                <fullName>9 months</fullName>
            </value>
            <value>
                <fullName>12 months</fullName>
            </value>
            <value>
                <fullName>unlimited</fullName>
                <label>Unlimited</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>