unpackaged/main/default/objects/Campaign/fields/Usage_Rights_comments__c.field-meta.xml
<CustomField>
    <fullName>Usage_Rights_comments__c</fullName>
    <description>US-0011867</description>
    <inlineHelpText>Please add specifically negotiated agreement on usage rights for certain influencers of this campaign here</inlineHelpText>
    <label>Usage Rights (comments)</label>
    <type>TextArea</type>
</CustomField>