unpackaged/main/default/objects/Campaign/recordTypes/eBay_Ads.recordType-meta.xml
<RecordType>
    <fullName>eBay_Ads</fullName>
    <active>true</active>
    <description>used for eBay Ads - NA marketing team</description>
    <label>eBay Ads</label>
</RecordType>