unpackaged/main/default/objects/Campaign/recordTypes/EBH_AMOutreach.recordType-meta.xml
<RecordType>
    <fullName>EBH_AMOutreach</fullName>
    <active>true</active>
    <description>There are three types of Outreaches that can be initiated: standalone GCX Outreach (Phone), GCX Inbound (Phone), AM Outreach (Outreaches initiated by Account Managers).</description>
    <label>Outreach</label>
</RecordType>