unpackaged/main/default/objects/Campaign/recordTypes/EBH_Campaign.recordType-meta.xml
<RecordType>
    <fullName>EBH_Campaign</fullName>
    <active>true</active>
    <description>Level 3 of the Campaign Hierarchy. Campaigns include the briefs and journeys focused on delivering customer communications and interactions around a specific objective.</description>
    <label>Campaign</label>
</RecordType>