unpackaged/main/default/objects/Campaign/recordTypes/EBH_CampaignProgramme.recordType-meta.xml
<RecordType>
    <fullName>EBH_CampaignProgramme</fullName>
    <active>true</active>
    <description>Level 2 of the Campaign Hierarchy. Programmes are high-level work packages to deliver against business priorities.</description>
    <label>Campaign Programme</label>
</RecordType>